syntax = "proto3";

option csharp_namespace = "CartridgeServer";

package CatridgeServerGRPC;

// The greeting service definition.
service CatridgeServerGRPC {
	// Sends a greeting
	rpc GetCartridge (CartridgeRequest) returns (CartridgeReply);
	rpc CreateCartridge (CreateRequest) returns (CartridgeReply);
}

// The request message containing the user's name.
message CartridgeRequest {
	string id = 1;
}

// The response message containing the greetings.
message CartridgeReply {
	string message = 1;
}

message CreateRequest {
	string message = 1;
}